first build-test

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
-# Compiled Object files
+build/
+zig-*/
+apple-*/
+
+*.obj*
 *.o
-*.obj
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.a
-*.lib
-
-# Executables
-*.exe
-
-# DUB
-.dub
-docs.json
-__dummy.html
-docs/
-
-# Code coverage
-*.lst
+*.nes*
+*.mlb
+*.elf
+*.sys*
+*.prg*
